--- a/.github/workflows/zap-af.yml
+++ b/.github/workflows/zap-af.yml
@@ -34,6 +34,6 @@ jobs:
           retention-days: 30
 
       - name: 'Upload Sarif results into CodeQL'
-        uses: github/codeql-action/upload-sarif@v1
+        uses: github/codeql-action/upload-sarif@v2
         with:
-          sarif_file: results.sarif
+          sarif_file: dast.sarif.json
