--- a/.github/workflows/zap-af.yml
+++ b/.github/workflows/zap-af.yml
@@ -7,6 +7,9 @@ on:
   #schedule:
     #- cron: '33 13 * * 4' # Sets schedule to scan every Wed at 13:33 UTC.
 
+permissions:
+  contents: read
+
 jobs:
   dast-run:
     runs-on: ubuntu-latest
@@ -34,6 +37,6 @@ jobs:
           retention-days: 30
 
       - name: 'Upload Sarif results into CodeQL'
-        uses: github/codeql-action/upload-sarif@v2
+        uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: dast.sarif.json
